--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.7",
     "bootstrap": "^5.3.2",
+    "graphql-tag": "^2.12.6",
     "html-react-parser": "^5.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
